# hackprinceton2024

./: .example.env  .gitignore  README.md  index.html  package.json  pyproject.toml  tailwind.config.js
app/: __init__.py  main.py
app/api/: __init__.py  job.py  patient.py  schedule.py  temp.py
app/database_scripts/: create_database.py  database.py  hospital_database.sqlite  seed.py
app/utils/: jwt.py  security.py
compute_backend/: main.py  model.py  p2p.py
genesis-node/: client.py  main.py  server.py
smc_test/: main.py  test.py
src/: auth0-provider.tsx  index.css  main.tsx
src/_components/: join-p2p.tsx  protected.tsx  socket.ts
src/api/: api.ts  store.ts
src/components/: Chart.tsx  Navbar.tsx  Patients.tsx  Schedule.tsx  Specialist.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  checkbox.tsx  table.tsx
src/pages/: dash-page.tsx  home-page.tsx  input-page.tsx
src/utils/: Router.tsx
